fix overflow

--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -37,6 +37,13 @@
   height: 100%;
 }
 
+.height-100-vh {
+  height: 100vh;
+}
+.overflow-auto {
+  overflow: auto;
+}
+
 .fb-collapse-padding-0 > .ant-collapse-header {
   padding: 8px !important;
 }
